# CubeCode

./: .gitignore  CMakeLists.txt  README.md  SoftwareConfig.h.in  compiler.sh
inc/: SoftwareConfig.h
inc/Common/: Common.hpp  Logger.hpp
script/: Toolchainfile.cmake  copy.sh
src/: main.cpp
src/Common/: Common.cpp  Logger.cpp
src/POSIX/: CMakeLists.txt  mmap.cpp  mmap.hpp
src/SystemV/: CMakeLists.txt  msg.cpp  msg.hpp  sem.cpp  sem.hpp  shm.cpp  shm.hpp
src/Utils/: CMakeLists.txt  JsonParser.cpp  JsonParser.hpp  Utils.cpp  Utils.hpp
src/Utils/zlib-1.2.11/: gzlib.c
test/MmapStream/: CMakeLists.txt  MmapStream.cpp
test/POSIX/: CMakeLists.txt  PosixMmapRead.cpp  PosixMmapWrite.cpp
test/SystemV/: CMakeLists.txt  SystemVRead.cpp  SystemVWrite.cpp
